# Skymap

./: .gitignore  CMakeLists.txt  CSVAdapter.cpp  CSVAdapter.h  ImageProcessing.cpp  ImageProcessing.h  MyFunctions.cpp  MyFunctions.h  NoOptic.cpp  NoOptic.h  README.md  Sky.h  SkyMap.cpp  SkyMap.h  SkyMapMatching.cpp  SkyMapMatching.h  Skymap_step3_0.cpp  Star.cpp  Star.h  TriangleMatching.cpp  TriangleMatching.h  appveyor.yml  compile_commands.json  coordinateTransformation.cpp  copySkyMap.bat  extraction.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  res.qrc  skymap.pro  skymap.qrc  ~$坐标转换.docx  坐标转换.docx
Data/: ElegantDark.qss  observation_00.csv  sky_table.csv  sky_table2_name.csv  sky_table_HR.csv  sky_table_loc.csv  sky_table_loc_HR.csv  sky_table_name_HR.csv  sky_table_name_SAO.csv  skymaps.csv
Others/code/: extraction.cpp  extraction.h  grid.cpp  grid.h
form/: mainwindow.ui  modedialog.cpp  modedialog.h  modedialog.ui  simdialog.ui
include/: ConsolColor.h  ImageProcessing.h  LPFI.h  MyFunctions.h  NoOptic.h  QCSVAdapter.h  RCFI.h  SkyMap.h  SkyMapMatching.h  SkyMapMatching.h.autosave  Star.h  TriangleMatching.h  commonhelper.h  exif.h  extraction.h  mainwindow.h  simdialog.h
src/: CSVAdapter.cpp  ImageProcessing.cpp  LPFI.cpp  MyFunctions.cpp  NoOptic.cpp  QCSVAdapter.cpp  RCFI.cpp  Sky.cpp  SkyMap.cpp  SkyMapMatching.cpp  Star.cpp  TriangleMatching.cpp  exif.cpp  extraction.cpp  main.cpp  mainwindow.cpp  mainwindow.cpp.autosave  simdialog.cpp
